--- a/src/components/pages/home/Style/Service.css
+++ b/src/components/pages/home/Style/Service.css
@@ -1,61 +1,4 @@
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: "Roboto", sans-serif;
-    line-height: 1.1;
-    font-weight: 500;
-    color: #222222;
-    margin: 0;
-    padding: 0;
-}
-
-h6, .h6 {
-    font-size: 28px;
-}
-
-h5, .h5 {
-    font-size: 30px;
-}
-
-.h6 {
-    display: block;
-    font-size: 0.67em;
-    margin-block-start: 2.33em;
-    margin-block-end: 2.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-
-.h5 {
-    display: block;
-    font-size: 0.83em;
-    margin-block-start: 1.67em;
-    margin-block-end: 1.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
-p {
-    margin: 0;
-}
-
-p {
-    color: #808080;
-}
 
 
 /* section{
@@ -77,14 +20,15 @@ p {
 } */
 
 .home1-section-heading2 {
-    color: black;
+    font-family: 'montserrat';
+    color: #082342;
     text-align: center;
-    font-weight: 600;
+    font-weight: bold;
     /* border: solid blue; */
 }
 
 .home1-section-heading2 span {
-    color: #F50057;
+    color: #FAD400;
 }
 
 .main_service_container .service_content_container p {
@@ -126,22 +70,31 @@ p {
     /* border: solid orange; */
 }
 
+.service_content p{
+    font-family: 'Franklin Gothic Light';
+    font-size: 16px;
+    color: #082342;
+}
+
+
 .service_content h5 {
+    font-family: 'montserrat';
     /* margin-top: 50px; */
-    color: black;
+    color: #082342;
     /* font-weight: 600; */
     font-size: 24px;
+    font-weight: bold;
     /* border: solid red; */
 }
 
 .service_content .fa-solid {
     font-size: 65px;
     padding: 15px;
-    color: #F50057;
+    color: #FF5C17;
 }
 
 .service_content:hover {
-    background-color: #F50057;
+    background-color: #082342;
 }
 
 .service_content:hover .fa-solid{
@@ -149,7 +102,7 @@ p {
 }
 
 .service_content:hover h5{
-    color: white;
+    color: #FAD400;
 }
 .service_content:hover p{
     color: white;
