--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 } */
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Helvetica", sans-serif;
   line-height: 1.1;
   font-weight: 500;
   color: #222222;
