--- a/src/components/pages/profile/Style/AddPetForm.css
+++ b/src/components/pages/profile/Style/AddPetForm.css
@@ -4,7 +4,9 @@
 }
 
 .main-add-pet-form-container h2{
-    color: black;
+    font-size: 30px;
+    color: #082342;
+    font-family: 'montserrat'; 
     font-weight: bold;
     margin-left: 5px;
 }
@@ -13,7 +15,7 @@
     width: 150px;
     height: 4px;
     margin: 10px 0px 20px 5px;
-    background-color: #e12454;
+    background-color: #FAD400;
 }
 
 .add-pet-grid-form {
@@ -36,7 +38,7 @@
         text-transform: uppercase;
         letter-spacing: 2px;
         font-weight: bold;
-        background-color: orange;
+        background-color: #FF5C17;
         cursor: pointer;
         transition: opacity 0.4s;
 }
@@ -55,6 +57,25 @@
     margin-bottom: 20px;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.add-pet-form h1{
+    font-size: 20px;
+    color: #082342;
+    font-family: 'montserrat';  
+    font-weight: bold;
+}
+
+.add-pet-form select{
+    border-radius: 100px;
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 1rem;
+    text-align: center;
+    padding: 17px 64px;
+    margin-bottom: 10px;
+    background-color: #082342;
+    color: #fff;;
 }
 
 @media screen and (max-width: 768px) {
