--- a/src/components/pages/profile/Style/PetTable.css
+++ b/src/components/pages/profile/Style/PetTable.css
@@ -12,7 +12,7 @@
     width: 150px;
     height: 4px;
     margin: 10px 0px 20px 5px;
-    background-color: #e12454;
+    background-color: #FAD400;
 }
 
 .whole-pet-table {
@@ -23,7 +23,8 @@
 
   /* Styling for the table header */
   .whole-pet-table th {
-    background-color: #e12454; /* pinkred color for header background */
+    background-color: #082342; /* pinkred color for header background */
+    font-family: 'montserrat';  
     color: #ffffff;
     font-weight: bold;
     text-align: center;
