--- a/src/components/pages/profile/Style/ProfilePage.css
+++ b/src/components/pages/profile/Style/ProfilePage.css
@@ -1,5 +1,5 @@
 .main-profile-container {
-    padding-top: 130px;
+    padding-top: 80px;
     background-color: white;
     color: black;
     display: flex;
@@ -17,7 +17,7 @@
 .profile-header-container {
     width: 100%;
     border-radius: 5px 5px 0px 0px;
-    background-color: #e12454;
+    background-color: #082342;
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -25,18 +25,21 @@
 }
 
 .profile-header-container h2{
+    font-family: 'montserrat';      
     color: white;
     font-weight: bold;
 }
 
 .profile-header-container button{
+    font-family: 'montserrat';  
+        font-weight: bold;
     padding: 13px 50px;
     margin-left: 5px;
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: bold;
-    background-color: orange;
+    background-color: #FF5C17;
     cursor: pointer;
     transition: opacity 0.4s;
 }
