--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -120,11 +120,11 @@ html  {
 }
 .nav_list {
   display: flex;
-  padding: 20px;
-  letter-spacing: 3px;
+  margin: 20px;
+  letter-spacing: 1px;
   justify-content: space-around;
   list-style: none;
-  margin: 0 5px ;
+  /* margin: 0 5px ; */
   font-size: 16px;
   color: white;
   font-family: 'montserrat';
