--- a/src/components/admin/pages/styles/AdminCalendarPage.css
+++ b/src/components/admin/pages/styles/AdminCalendarPage.css
@@ -79,6 +79,15 @@
   background-color: #f75959;
 }
 
+.legend-item .done {
+  background-color: #4caf50;
+}
+
+.rbc-event.done {
+  background-color: #4caf50; /* Green for done */
+  color: #e9e7e7; /* Text color for events, adjust as needed */
+}
+
 .rbc-event.denied {
   background-color: #f75959; /* Lighter red for denied */
   color: #e9e7e7; /* Text color for events, adjust as needed */
