--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -120,7 +120,7 @@ html  {
 }
 .nav_list {
   display: flex;
-  margin: 20px;
+  margin-left: 20px;
   letter-spacing: 1px;
   justify-content: space-around;
   list-style: none;
