--- a/src/components/pages/profile/Style/AddPetForm.css
+++ b/src/components/pages/profile/Style/AddPetForm.css
@@ -90,6 +90,39 @@
     border-radius: 100%;
 }
 
+
+/* AddPetForm.css */
+
+/* Unique class for the autocomplete */
+.autocomplete-container {
+    position: relative;
+  }
+  
+  .autocomplete-results {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    max-height: 150px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    background-color: #fff;
+  }
+  
+  .autocomplete-results li {
+    padding: 8px;
+    cursor: pointer;
+  }
+  
+  .autocomplete-results li:hover {
+    background-color: #f0f0f0;
+  }
+
+  /* ... Other styles ... */
+  
+
 @media screen and (max-width: 768px) {
 
     .main-add-pet-form-container {
@@ -165,4 +198,6 @@
     }
 
 }
+
+
 
