--- a/src/components/admin/auth/LoginPage.css
+++ b/src/components/admin/auth/LoginPage.css
@@ -1,59 +1,58 @@
 /* LoginPage.css */
-.main-container {
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-    position: relative;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .main-container::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('https://img.freepik.com/premium-photo/cute-dog-puppy-pet-white-background_653240-2202.jpg') center center fixed;
-    background-size: cover;
-    filter: blur(1px); /* Adjust the blur intensity as needed */
-    z-index: -1; /* Place the background layer behind the content */
-  }
-  
-  .login-container {
-    max-width: 400px;
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .login-content {
-    text-align: center;
-  }
-  
-  .login-subtext {
-    color: #555;
-    margin-bottom: 20px;
-    font-size: 16px;
-  }
-  
-  .login-links {
-    margin-top: 20px;
-  }
-  
-  .forgot-password-link {
-    color: #3498db;
-    text-decoration: none;
-    font-size: 14px;
-  }
-  
-  .forgot-password-link:hover {
-    text-decoration: underline;
-  }
-  
+.Main-container {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Main-container::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('https://img.freepik.com/premium-photo/cute-dog-puppy-pet-white-background_653240-2202.jpg') center center fixed;
+  background-size: cover;
+  filter: blur(1px); /* Adjust the blur intensity as needed */
+  z-index: -1; /* Place the background layer behind the content */
+}
+
+.login-container {
+  max-width: 400px;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login-content {
+  text-align: center;
+}
+
+.login-subtext {
+  color: #555;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+.login-links {
+  margin-top: 20px;
+}
+
+.forgot-password-link {
+  color: #3498db;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.forgot-password-link:hover {
+  text-decoration: underline;
+}
